--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1712,6 +1712,12 @@ html {
   margin-top: 0;
 }
 
+.mockup-phone .display {
+  overflow: hidden;
+  border-radius: 40px;
+  margin-top: -25px;
+}
+
 .mockup-browser .mockup-browser-toolbar .input {
   position: relative;
   margin-left: auto;
@@ -2128,6 +2134,10 @@ html {
   margin-top: 1.5rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -2166,6 +2176,10 @@ html {
 
 .flex-none {
   flex: none;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-2 {
