--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap');
+html{
+    font-family: 'Pixelify Sans', sans-serif;
+}
 .pokemons{
     margin: 0 auto;
 }
@@ -87,4 +91,7 @@
       height: auto;
     }
   }
+
+
+
 
