--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ html{
 
 .inicio-sesion{
     font-size: 14px;
+    color: #fff !important;
+}
+.inicio-sesion::placeholder{
+    color: #fff;
 }
 
 .footer {
